--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@
 }
 
 .animacioncolor:hover{
-    animation: animacion1 0.3s ease reverse ,mover1 1s ease-in-out;
-    position: relative;
+    animation: animacion1 0.3s ease 0s reverse ,mover1 1s ease-in-out 0s;
+    
 
 }
 
@@ -150,26 +150,27 @@
 
 .movletras{
     position: relative;
-animation: letras 1.3s ease;
+animation: letras 1s ease;
 }
+
 
 @keyframes letras1 {
     0%,50%,80%{
-        background: #868585;
-        display: block;
+        background: hwb(164 14% 31%);
         height: 100%;
         top: 0;
         left: 0;  
-        clip-path: var(--clyppy);
-        z-index: -1;
+        opacity: 0%;
         }
 
     100%{
-        clip-path: polygon(0 1%, 78% 0, 100% 100%, 0 100%);
+        clip-path: circle(50% at 50% 50%);
+
     }
      }
 
-     .letrablancamov:hover{
-        animation: letras1 3s ease;
-        animation-delay: 1.2s;
+     .movletras1:hover{
+        animation: letras1 1.1s ease ;
+        
      }
+     
